# onnxruntime_handler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
.github/workflows/: build_orthandler.yml  build_orthandler_linux-x64-cpu_debug.yml  build_orthandler_linux-x64-gpu_debug.yml  build_orthandler_linux-x64_debug.yml  build_orthandler_win-x64-cpu_debug.yml  build_orthandler_win-x64_debug.yml
assets/models/: conv1x1.onnx
onnxruntime_handler/: OnnxRuntimeHandler.cpp  OnnxRuntimeHandler.h  OnnxRuntimeHandlerCore.cpp  OnnxRuntimeHandlerCore.h  OrtHandler.cpp  OrtHandler.h  OrtHandlerCore.cpp  OrtHandlerCore.h
tests/: test_ort_handler.cpp
